# sedit

./: CMakeLists.txt
include/: buffer.hpp
src/: buffer.cpp  main.cpp
